<?xml version="1.0"?>
<package>
  <name>uwesub_svs</name>
  <version>0.1.0</version>
  <description>driver for the miniSVS</description>

  <maintainer email="first.lastname@posteo.de">Raphael Nagel</maintainer>
  <license>BSD</license>
  <author email="first.lastname@posteo.de">Raphhael Nagel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
